manifests/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kasm
  namespace: kasm
spec:
  hosts:
    - "kasm.###ZARF_VAR_DOMAIN###"
  gateways:
    - istio-system/dataplane
  http:
    - route:
        - destination:
            host: kasm-kasm-workspaces.kasm.svc.cluster.local
            port:
              number: 8080
